welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:31: error: ')' expected but '}' found.
	}
        ^